# SieciProjekt

./: CMakeLists.txt  README.md  build.sh
include/: boxCollision.hpp  game.hpp  map.hpp  player.hpp  wall.hpp  window.hpp
src/: boxCollision.cpp  game.cpp  main.cpp  map.cpp  player.cpp  wall.cpp  window.cpp
